[gd_scene load_steps=10 format=3 uid="uid://ctcjeab4sc7d4"]

[ext_resource type="Texture2D" uid="uid://c3d8d3u01aewa" path="res://Assets/Farmer Story Asset and Backgrounds v2/Farmer Story Sprites/Farmer Story Sprites.png" id="1_8cteu"]
[ext_resource type="Script" path="res://Characters/Bomb/bomb_bat.gd" id="1_48oqg"]
[ext_resource type="Texture2D" uid="uid://d133k5i3ynljw" path="res://Untitled.png" id="2_bja4i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_unuy6"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_x364x"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vl1tq"]
radius = 22.2036

[sub_resource type="Animation" id="Animation_ntgtk"]
resource_name = "Bomb"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack Area/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.166667, 0.300001, 0.400001),
"transitions": PackedFloat32Array(-1.5, 1, 1.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack Area/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1.41421, 1.41421, 1),
"update": 0,
"values": [Vector2(0.215, 0.215), Vector2(0.215, 0.215), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.400001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.25098, 0.25098, 0.25098, 0.843137), Color(0.25098, 0.25098, 0.25098, 0.843137), Color(0.25098, 0.25098, 0.25098, 0)]
}

[sub_resource type="Animation" id="Animation_mn5a1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack Area/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack Area/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.215, 0.215)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.25098, 0.25098, 0.25098, 0.843137)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_babw7"]
_data = {
"Bomb": SubResource("Animation_ntgtk"),
"RESET": SubResource("Animation_mn5a1")
}

[node name="RigidBody2D" type="RigidBody2D"]
mass = 0.5
gravity_scale = 0.5
script = ExtResource("1_48oqg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_unuy6")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.25098, 0.25098, 0.25098, 0.843137)
texture_filter = 1
texture = ExtResource("1_8cteu")
region_enabled = true
region_rect = Rect2(496, 32, 16, 16)

[node name="Ready Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ready Area"]
shape = SubResource("CircleShape2D_x364x")
debug_color = Color(0, 0.6, 0.701961, 0.054902)

[node name="Attack Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Area"]
scale = Vector2(0.215, 0.215)
shape = SubResource("CircleShape2D_vl1tq")
debug_color = Color(0.701961, 0, 0, 0.054902)

[node name="Sprite2D" type="Sprite2D" parent="Attack Area"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(1.82, 1.82)
texture = ExtResource("2_bja4i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_babw7")
}

[connection signal="body_entered" from="Ready Area" to="." method="_on_ready_area_body_entered"]
[connection signal="body_entered" from="Attack Area" to="." method="_on_attack_area_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
